--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     cek(); //panggil function cek
     a=eval(form.angka1.value); //mengisi variabel a dengan isi dari input name angka1
     b=eval(form.angka2.value); //mengisi variabel b dengan isi dari input name angka2
-    c=a+b //menjumlahkan kedua variabel
-    form.total.value = c; //memberikan hasil penjumlahan ke input name total
+    c=eval(form.angka3.value); //mengisi variabel a dengan isi dari input name angka1
+    d=eval(form.angka4.value);
+    e=eval(form.angka5.value); //mengisi variabel a dengan isi dari input name angka1
+    hasil=a+b+c+d+e //menjumlahkan kedua variabel
+    form.total.value = hasil; //memberikan hasil penjumlahan ke input name total
     }
     
     function reset() {
@@ -47,6 +50,15 @@
           </div>
           <div class="form-group">
             <input type=text name="angka2" class="form-control" value="0">
+          </div>
+          <div class="form-group">
+            <input type=text name="angka3" class="form-control" value="0">
+          </div>
+          <div class="form-group">
+            <input type=text name="angka4" class="form-control" value="0">
+          </div>
+          <div class="form-group">
+            <input type=text name="angka5" class="form-control" value="0">
           </div>
           <br>
           <div class="form-group">
