--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     e=eval(form.angka5.value); 
     sisa=eval(form.sisa.value);
     hasil=a+b+c+d+e-sisa 
-    form.total.value ="Rp."+ hasil; 
+    kali = hasil*10000
+    form.total.value ="Rp."+ kali; 
     }
     
     function reset() {
