--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     e=eval(form.angka5.value); 
     sisa=eval(form.sisa.value);
 
+  //kartu
+  card=eval(form.kartu.value); 
+
     // Bonus & Bon
     bs=eval(form.bonus.value);
     bn=eval(form.bon.value); 
@@ -58,19 +61,20 @@
   ex=eval(form.pengeluaran.value);
 
 //PERHITUNGAN AKHIR
-    
+    bnus= bs*10 
     hasil=a+b+c+d+e-sisa-bs-bn-free 
+    cards = card-hasil-sembilank-delapan+bnus
     sk= sembilank*1000
     sn= sembilan*1000
     dn= delapan*2000
     kali = hasil*10000
     result = kali-sk-sn-dn-ex
 
-		
+		form.total_kartu.value =cards+" Kartu";
 var	reverse = result.toString().split('').reverse().join(''),
 	ribuan 	= reverse.match(/\d{1,3}/g);
 	ribuan	= ribuan.join('.').split('').reverse().join('');
-    form.result.value ="Rp."+ ribuan; 
+    form.result.value ="Rp "+ ribuan; 
     }
     
     function reset() {
@@ -97,12 +101,20 @@ var	reverse = result.toString().split('').reverse().join(''),
       <div class="card-body">
         <h5 class="card-title text-center">Online Calculator</h5>
         <form class="" name=form>
+          <div class="trip text-center bg-primary pt-2 pr-3 pl-3 pb-2">
+            <div class="form-group row">
+            <label for="tripan" class="col-sm-1 col-form-label text-white">Jumlah Kartu Awal</label>
+            <div class="col-sm-10">
+              <input type="number" name="kartu" class="form-control text-center"  value="0">                    
+            </div>
+            </div>
+          </div>
           <div class="scroll">
           <div class="trip text-center bg-info pt-2 pr-3 pl-3 pb-2">
             <div class="form-group row">
             <label for="tripan" class="col-sm-1 col-form-label text-white">Trip 1</label>
             <div class="col-sm-10">
-              <input type="number" name="angka1" class="form-control"  value="0">                    
+              <input type="number" name="angka1" class="form-control text-center"  value="0">                    
             </div>
             </div>
           </div>
@@ -110,7 +122,7 @@ var	reverse = result.toString().split('').reverse().join(''),
             <div class="form-group row">
             <label for="tripan" class="col-sm-1 col-form-label text-white">Trip 2</label>
             <div class="col-sm-10">
-              <input type="number" name="angka2" class="form-control"  value="0">                    
+              <input type="number" name="angka2" class="form-control text-center"  value="0">                    
             </div>
             </div>
           </div>
@@ -118,7 +130,7 @@ var	reverse = result.toString().split('').reverse().join(''),
             <div class="form-group row">
             <label for="tripan" class="col-sm-1 col-form-label text-white">Trip 3</label>
             <div class="col-sm-10">
-              <input type="number" name="angka3" class="form-control"  value="0">                    
+              <input type="number" name="angka3" class="form-control text-center"  value="0">                    
             </div>
             </div>
           </div>
@@ -126,7 +138,7 @@ var	reverse = result.toString().split('').reverse().join(''),
             <div class="form-group row">
             <label for="tripan" class="col-sm-1 col-form-label text-white">Trip 4</label>
             <div class="col-sm-10">
-              <input type="number" name="angka4" class="form-control"  value="0">                    
+              <input type="number" name="angka4" class="form-control text-center"  value="0">                    
             </div>
             </div>
           </div>
@@ -134,7 +146,7 @@ var	reverse = result.toString().split('').reverse().join(''),
             <div class="form-group row">
             <label for="tripan" class="col-sm-1 col-form-label text-white">Trip 5</label>
             <div class="col-sm-10">
-              <input type="number" name="angka5" class="form-control"  value="0">                    
+              <input type="number" name="angka5" class="form-control text-center"  value="0">                    
             </div>
             </div>
           </div>
@@ -159,7 +171,7 @@ var	reverse = result.toString().split('').reverse().join(''),
               <input type="text" class="form-control text-center" name="bon" value="0">
             </div>
           </div>
-          <div class="row pb-3 bg-success mt-2">
+          <div class="row pb-3 bg-success ">
             <div class="col text-center text-white ">
               9000 + kartu
               <input type="text" class="form-control text-center" name="ninecard" value="0" >
@@ -169,7 +181,7 @@ var	reverse = result.toString().split('').reverse().join(''),
               <input type="text" class="form-control text-center" name="nine" value="0">
             </div>
           </div>
-          <div class="row pb-3 bg-primary mt-2">
+          <div class="row pb-3 bg-primary ">
             <div class="col text-center text-white">
               8000
               <input type="text" class="form-control text-center" name="eight" value="0" >
@@ -179,7 +191,7 @@ var	reverse = result.toString().split('').reverse().join(''),
               <input type="text" class="form-control text-center" name="gratis" value="0">
             </div>
           </div>
-          <div class="row pb-3 bg-secondary mt-2">
+          <div class="row pb-3 bg-secondary ">
             <div class="col text-center text-white">
               Pengeluaran
               <input type="text" class="form-control text-center" name="pengeluaran" value="0" placeholder="cth: 200000" >
